# elderberry

./: .gitignore  cloudberry.sublime-project  cloudberry.sublime-workspace  credits.md  elderberry.sublime-project  readme.md
compiler/: Cargo.toml
compiler/example/: desk.berry  desk.elderberry  interface.elderberry  simple.berry  simple.elderberry
compiler/runtime/: main.js
compiler/src/: ast.rs  generator.rs  lib.rs  main.rs  parser.rs  typechecker.rs  typechecker_tests.rs  types.rs
compiler/tools/: compile.sh  desk.sh  run.sh  typecheck.sh
editor/: build.sh  index.html  main.elderberry  watch.sh
