[package]
name = "elderberry-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0.0"
by_address = "1.0.4"
logos = "*"
logos-derive = "*"
clap = { version = "3.1.5", features = ["derive"] }
# expect-test = "*"

[test-dependencies]
insta = "*"

[dev-dependencies]
insta = "*"
